--- a/src/public/template/index.html
+++ b/src/public/template/index.html
@@ -9,6 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="root" id="renderer"></div>
+    <div class="root flex-dir-col" id="renderer"></div>
 </body>
 </html>
