--- a/src/app/components/pages/home/elements/news/news.scss
+++ b/src/app/components/pages/home/elements/news/news.scss
@@ -3,7 +3,7 @@
         position: relative;
         margin: 0 8px;
         margin-top: 42px;
-
+        border-radius: 4px;
         width: 24.8%;
         min-width: 290px;
         height: 355px;
@@ -60,13 +60,10 @@
             left: 0;
             right: 0;
             bottom: 0;
-            height: 150px;
-            padding: 10px 15px;
-            padding-top: 25px;
-
+            height: 175px;
+            padding: 0 16px;
+            padding-top: 16px;
             background-color: #fff;
-            border-top-left-radius: 25px;
-            border-top-right-radius: 25px;
 
             .i-title {
                 margin: 0 0 12px;
@@ -81,12 +78,6 @@
 
             .text > p {
                 display: none;
-                margin: 0 0 12px;
-
-                font-size: 14px;
-                letter-spacing: .03em;
-                color: #4f4f4f;
-
                 &:first-child {
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
