--- a/src/app/components/pages/home/elements/product/element.scss
+++ b/src/app/components/pages/home/elements/product/element.scss
@@ -1,4 +1,4 @@
-.products .block:last-child {
+.section-product .block:last-child {
     text-align: right;
     padding-right: 116px;
 
@@ -32,15 +32,15 @@
     }
 }
 
-.products .block:first-child {
+.section-product .block:first-child {
     padding: 0 1.5%;
 }
 
-.products .flex .element {
+.section-product .flex .element {
     flex: 1 0;
 }
 
-.products .element {
+.section-product .element {
     position: relative;
     display: block;
     height: 235px;
